[project]
name = "kml2ofds"
version = "0.1.1"
authors = [{ name = "Steve Song", email = "steve@manypossibilities.net" }]
description = "KML2OFDS is a python script for converting KML maps of fibre optic network infrastructure to the Open Fibre Data Standard"
readme = "README.md"

# Minimum required version of python
requires-python = ">=3.10"

# Tool Dependencies
dependencies = [
    #"matplotlib==3.8.2",
    "pykml ==0.2.0",
    "numpy >=1.26.2, <2",
    "shapely >=2.0.2, <3",
    "geopandas >=0.14.1, <1.0",
    "pandas >=2.1.3, <3",
    "inquirer >=3.2.1, <4",
    "click >=8.1, <9",
    "libcoveofds == 0.9.0",
    "scikit-learn == 1.4.2"
]

# License chosen from https://spdx.org/licenses/
license = "GPL-3.0-or-later"

# Classifiers from https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.scripts]
# Install kml2ofds program to user's PATH
kml2ofds = "kml2ofds:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
